--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "buefy": "^0.8.15",
     "core-js": "^3.6.4",
     "firebase": "^7.13.2",
     "vue": "^2.6.11",
